--- a/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
+++ b/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
@@ -88,6 +88,21 @@
                             <h1>The Importance of Responsive Design in the Modern Web Era | What is responsive design?</h1>
                             <p class="date-text"><span>27 March 2025</span></p>
                         </div>
+                        <div class="social-share-container">
+                            <!-- <a href="https://www.facebook.com/sharer/sharer.php?u=https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html" class="facebook-btn" target="_blank">
+                                <i class="fa-brands fa-square-facebook"></i>
+                            </a> -->
+                            <a href="https://twitter.com/intent/tweet?url=https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html&text=Check%20this%20out!" class="twitter-btn" target="_blank">
+                                <i class="fa-brands fa-square-x-twitter"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html" target="_blank" class="social-button linkedin">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a href="https://wa.me/?text=Check%20this%20out!%20https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html" class="WhatsApp-btn" target="_blank">
+                                <i class="fa-brands fa-square-whatsapp"></i>
+                            </a>
+                            <a href="javascript:void(0)" class="copy-button" id="copyButton"><i class="fa-solid fa-square-share-nodes"></i></a>
+                        </div>
                     </div>
                 </div>
                 <div class="text-contain">
