--- a/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
+++ b/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
@@ -101,7 +101,7 @@
                             <a href="https://wa.me/?text=Check%20this%20out!%20https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html" class="WhatsApp-btn" target="_blank">
                                 <i class="fa-brands fa-square-whatsapp"></i>
                             </a>
-                            <a href="javascript:void(0)" class="copy-button" id="copyButton"><i class="fa-solid fa-square-share-nodes"></i></a>
+                            <a href="javascript:void(0)" class="copy-button" id="copyButton1"><i class="fa-solid fa-square-share-nodes"></i></a>
                         </div>
                     </div>
                 </div>
@@ -194,5 +194,37 @@
         </div>
     </div>
     <script src="../js/main.js"></script>
+    <script>
+        // Function to copy the current page URL to the clipboard
+document.getElementById('copyButton1').addEventListener('click', function() {
+  // Get the current page URL
+  var currentURL = window.location.href;
+
+  // Create a temporary input element to hold the URL
+  var tempInput = document.createElement('input');
+  tempInput.value = currentURL;
+  document.body.appendChild(tempInput);
+
+  // Select the content in the input
+  tempInput.select();
+  tempInput.setSelectionRange(0, 99999);  // For mobile devices
+
+  // Execute the copy command
+  document.execCommand('copy');
+
+  // Remove the temporary input element
+  document.body.removeChild(tempInput);
+
+  // Display success message
+  var messageElement = document.getElementById('message');
+  messageElement.textContent = 'URL copied to clipboard!';
+  messageElement.style.color = 'green';
+
+  // Optional: Clear the success message after 3 seconds
+  setTimeout(function() {
+      messageElement.textContent = '';
+  }, 3000);
+});
+    </script>
 </body>
 </html>
