--- a/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
+++ b/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
@@ -18,7 +18,7 @@
 
     <meta property="og:title" content="The Importance of Responsive Design in the Modern Web Era" />
     <meta property="og:description" content="In the ever-evolving landscape of web design, responsive design has become a cornerstone of effective, user-friendly websites ..." />
-    <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/blog.html" />
+    <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
 </head>
 <!-- Google tag (gtag.js) -->
