--- a/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
+++ b/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Asif Aleem">
     <meta name="copyright" content="Copyright © Asif Aleem">
     <meta name="classification" content="portfolio"/>
-    <link rel="canonical" href="https://asifaleem-del.github.io/portfolio/blog.html"/>
+    <link rel="canonical" href="https://asifaleem-del.github.io/portfolio/blogs/the-importance-of-responsive-design-in-the-modern-web-era.html"/>
     <!-- Favicon Icon -->
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="stylesheet" href="../css/styles.css">
