--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <nav class="navbar" onclick="removeActive()">
             <a href="#home" style="--i:1" >Home</a>
             <a href="#about" style="--i:2">About</a>
-            <a href="#services" style="--i:3">Services</a>
+            <a href="#services" style="--i:3">Expertise</a>
             <a href="#skill" style="--i:3">Skills</a>
             <a href="#portfolio" style="--i:4">Work for</a>
             <a href="#contact" style="--i:5">Contact</a>
@@ -76,9 +76,6 @@
         </button>
     </header>
     <section class="home" id="home">
-        <!-- <div class="animatedBox">
-            <div>HTML</div><div>CSS</div><div>Java Script</div><div>React Js</div><div>Bootstrap</div><div>Angular</div><div>SEO</div><div>Digital Marketing</div><div>Responsive</div><div>Tailwind CSS</div><div>Photoshop</div><div>PHP</div><div>Frontend Developer</div>
-        </div> -->
         <div class="profile-pic">
             <img src="img/asif-circle-img.png" alt="Asif Aleem Senior UI Developer" />
         </div>
@@ -125,12 +122,12 @@
     <section class="services" id="services">
         <div class="reveal">
         <div class="container">
-            <h3 class="sub-title">My <span>Services</span></h3>
+            <h3 class="sub-title">My <span>Expertise</span></h3>
             <div class="services-list">
                 <div>
                     <span><i class="fa-solid fa-code"></i></span>
                     <h3>Website Design</h3>
-                    <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites. I also work on WordPrees. Currently, I am working with a US-based organization which are using SaaS software. Make websites user user-friendly and SEO friendly.</p>
+                    <p>I work on multiple websites and design them by myself. Make CRM website designs and maintain large backend websites. Make e-commerce websites design. I also work on WordPrees.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
@@ -142,13 +139,13 @@
                 <div>
                     <span><i class="fa-regular fa-file-code"></i></span>
                     <h3>Web Development</h3>
-                    <p>For backend work I use PHP and JavaScript. Activate forms by using PHP. Fetch API Data dynamically with help of JavaScript. I also Host Websites on Live Server. Track users activity on live website with help of Google Analytics.</p>
+                    <p>For backend work I use PHP and JavaScript. Activate forms by using PHP. Fetch API Data dynamically with help of JavaScript. I also Host Websites on Live Server. Track users activity on live website with help of Google Analytics and Bing Webmaster Tools.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
                 <div>
                     <span><i class="fa-solid fa-palette"></i></span>
                     <h3>Graphic Design</h3>
-                    <p>I make too many template designs in Photoshop. I also make some printable designs in Corel Draw. I have worked on Figma, Invision, Zero Height, and Adobe Illustrator graphic design tools. I have worked 1 year and 1 month as a graphic designer and web designer for my first company.</p>
+                    <p>Make too many template designs in Figma and in Photoshop. I also make some printable designs using Corel Draw and Adobe Illustrator. I have worked on Figma, Invision, Photoshop, Zero Height, and Adobe Illustrator graphic design tools.</p>
                     <!-- <a href="#" class="read">Learn more</a> -->
                 </div>
             </div>
