--- a/blog.html
+++ b/blog.html
@@ -20,6 +20,15 @@
     <meta property="og:description" content="I am Senior UI Developer. Work as Web Designer and Graphic Designer." />
     <meta property="og:url" content="https://asifaleem-del.github.io/portfolio/blog.html" />
     <meta property="og:image" itemprop="image" content="https://asifaleem-del.github.io/portfolio/img/og-img.jpg" />
+
+    <!-- Clarity -->
+    <script type="text/javascript">
+        (function (c, l, a, r, i, t, y) {
+            c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) };
+            t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i;
+            y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
+        })(window, document, "clarity", "script", "siqhgfyftq");
+    </script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRKN0NXR60"></script>
